| Summary: | ASTERISK-27273: app_voicemail: When a voicemail is marked as "Urgent", it is not sent by email/processed by the mailcmd command | ||||
| Reporter: | Leandro Dardini (ldardini) | Labels: | |||
| Date Opened: | 2017-09-14 16:08:48 | Date Closed: | 2020-08-25 16:39:34 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_voicemail | ||
| Versions: | 13.17.1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Asterisk compiled from sources on CentOS 6.9 64 bit. Voicemail is stored on MySQL using ODBC | Attachments: | ( 0) asterisk_log.txt ( 1) debug_log_27273.txt ( 2) voicemail.conf ( 3) voicemail.sql | ||
| Description: | A mailbox is configured to allow review. Once the voicemail message is recorded, # is pressed to access the voicemail menu. Entry 4 is selected to mark the message as "Urgent" and then confirmed with 1. The message is not being sent by email nor processed by the mailcmd configuration parameter. The voicemail is however correctly stored in the ODBC database.
No weird messages are shown in the asterisk console, just the standard ones: (see asterisk_log.txt) | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-14 16:08:49.470-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-09-19 15:01:22.997-0500 [~ldardini] I'm reattaching your debug as a txt file. Please remember to attach debug as a file. If you do include a small excerpt in the description field or a comment please wrap it in noformat tags. By: Rusty Newton (rnewton) 2017-09-19 15:05:23.648-0500 We require additional debug to continue with triage of your issue. Please follow the instructions on the wiki [1] for how to collect debugging information from Asterisk. For expediency, where possible, attach the debug with a '.txt' file extension so that the debug will be usable for further analysis. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Rusty Newton (rnewton) 2017-09-19 15:06:34.406-0500 Please follow the instructions in the previous comment to collect a debug log (with warning,error,notice,verbose,debug , with both verbose and debug turned up to 5 or higher). In addition please attach your voicemail configuration. By: Leandro Dardini (ldardini) 2017-09-21 07:50:04.187-0500 Debug log By: Leandro Dardini (ldardini) 2017-09-21 07:50:25.547-0500 voicemail.conf By: Leandro Dardini (ldardini) 2017-09-21 07:50:45.374-0500 Voicemail realtime configuration By: Sean Bright (seanbright) 2020-01-15 16:17:20.660-0600 I am not able to reproduce this using your configuration and the latest development release of Asterisk 13. If you are still able to reproduce this with Asterisk 13.31.0 when it is released, please re-open this issue by commenting on it. By: ben kolodny (benphone) 2020-07-09 03:53:32.731-0500 the bug is still here in 16.11.1 By: ben kolodny (benphone) 2020-07-09 04:56:14.588-0500 debug of call to voicemail not mark urgent but not sending the email By: Friendly Automation (friendly-automation) 2020-08-25 16:39:35.659-0500 Change 14807 merged by Friendly Automation: app_voicemail: Process urgent messages with mailcmd [https://gerrit.asterisk.org/c/asterisk/+/14807|https://gerrit.asterisk.org/c/asterisk/+/14807] By: Friendly Automation (friendly-automation) 2020-08-25 16:44:50.392-0500 Change 14791 merged by Friendly Automation: app_voicemail: Process urgent messages with mailcmd [https://gerrit.asterisk.org/c/asterisk/+/14791|https://gerrit.asterisk.org/c/asterisk/+/14791] By: Friendly Automation (friendly-automation) 2020-08-25 16:44:53.548-0500 Change 14792 merged by Friendly Automation: app_voicemail: Process urgent messages with mailcmd [https://gerrit.asterisk.org/c/asterisk/+/14792|https://gerrit.asterisk.org/c/asterisk/+/14792] By: Friendly Automation (friendly-automation) 2020-08-25 16:47:33.860-0500 Change 14793 merged by Friendly Automation: app_voicemail: Process urgent messages with mailcmd [https://gerrit.asterisk.org/c/asterisk/+/14793|https://gerrit.asterisk.org/c/asterisk/+/14793] By: Friendly Automation (friendly-automation) 2020-08-25 18:18:14.431-0500 Change 14794 merged by Kevin Harwell: app_voicemail: Process urgent messages with mailcmd [https://gerrit.asterisk.org/c/asterisk/+/14794|https://gerrit.asterisk.org/c/asterisk/+/14794] By: ben kolodny (benphone) 2020-09-03 05:41:52.825-0500 was not ADDED TO the release of 13 and 16 why ? By: Joshua C. Colp (jcolp) 2020-09-03 05:49:40.339-0500 This change was merged after the release candidate process for the latest releases began. | ||||